// Licensed to Apache Software Foundation (ASF) under one or more contributor
// license agreements. See the NOTICE file distributed with
// this work for additional information regarding copyright
// ownership. Apache Software Foundation (ASF) licenses this file to you under
// the Apache License, Version 2.0 (the "License"); you may
// not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

syntax = "proto3";

package banyandb.database.v1;

import "banyandb/common/v1/common.proto";
import "banyandb/database/v1/database.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/apache/skywalking-banyandb/api/proto/banyandb/database/v1";
option java_package = "org.apache.skywalking.banyandb.database.v1";

enum Action {
  ACTION_UNSPECIFIED = 0;
  ACTION_PUT = 1;
  ACTION_DELETE = 2;
}

message ShardEvent {
  Shard shard = 1;
  Action action = 2;
  google.protobuf.Timestamp time = 3;
}

message EntityEvent {
  common.v1.Metadata subject = 1;
  message TagLocator {
    uint32 family_offset = 1;
    uint32 tag_offset = 2;
  }
  repeated TagLocator entity_locator = 2;
  Action action = 3;
  google.protobuf.Timestamp time = 4;
}
